// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search Form Default renders correctly 1`] = `
<jest>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-search-form__button ecl-button--icon-only"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          aria-hidden="true"
          class="wt-icon--search ecl-icon ecl-icon--m ecl-button__icon ecl-icon--search"
          data-ecl-icon=""
        />
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra attributes 1`] = `
<jest>
  <form
    class="ecl-search-form"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-search-form__button ecl-button--icon-only"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          aria-hidden="true"
          class="wt-icon--search ecl-icon ecl-icon--m ecl-button__icon ecl-icon--search"
          data-ecl-icon=""
        />
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra class names 1`] = `
<jest>
  <form
    class="ecl-search-form custom-class custom-class--test"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-search-form__button ecl-button--icon-only"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          aria-hidden="true"
          class="wt-icon--search ecl-icon ecl-icon--m ecl-button__icon ecl-icon--search"
          data-ecl-icon=""
        />
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra classes on the button 1`] = `
<jest>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-search-form__button button-extra-class ecl-button--icon-only"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          aria-hidden="true"
          class="wt-icon--search ecl-icon ecl-icon--m ecl-button__icon ecl-icon--search"
          data-ecl-icon=""
        />
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra classes on the input 1`] = `
<jest>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input input-extra-class"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-search-form__button ecl-button--icon-only"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          aria-hidden="true"
          class="wt-icon--search ecl-icon ecl-icon--m ecl-button__icon ecl-icon--search"
          data-ecl-icon=""
        />
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra form elements 1`] = `
<jest>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-search-form__button ecl-button--icon-only"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          aria-hidden="true"
          class="wt-icon--search ecl-icon ecl-icon--m ecl-button__icon ecl-icon--search"
          data-ecl-icon=""
        />
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
    <input
      id="custId"
      name="custId"
      type="hidden"
      value="1"
    />
  </form>
</jest>
`;
